--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "main": "dist/index.js",
   "scripts": {
+    "example": "tsx scripts/example.ts",
     "test": "tsx scripts/test.ts",
     "build": "tsx scripts/build.ts",
     "publish:stable": "tsx scripts/publish.ts"
