--- a/example/package.json
+++ b/example/package.json
@@ -11,12 +11,13 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-document": "file:..",
-    "react-native-webview": "^13.3.1"
+    "react-native-document": "latest",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "~0.72.2",
     "typescript": "^5.1.3"
   }
 }
