--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.11",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-document": "latest",
